# libbng

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
bng/: CMakeLists.txt  ast.cpp  ast.h  base_flag.cpp  base_flag.h  bng.h  bng_config.cpp  bng_config.h  bng_data.cpp  bng_data.h  bng_defines.h  bng_engine.cpp  bng_engine.h  bngl_names.h  bngl_parser.y  bngl_scanner.l  cplx.cpp  cplx.h  debug_config.h  elem_mol.cpp  elem_mol.h  elem_mol_type.cpp  elem_mol_type.h  filesystem_utils.cpp  filesystem_utils.h  graph.cpp  graph.h  parser.cpp  parser.h  parser_utils.cpp  parser_utils.h  rxn_class.cpp  rxn_class.h  rxn_compartment_utils.cpp  rxn_compartment_utils.h  rxn_container.cpp  rxn_container.h  rxn_rule.cpp  rxn_rule.h  semantic_analyzer.cpp  (+8 more)
bng/utils/: parse_grammar.py
libs/nauty/: nauty.h
test/: .gitignore  UNLICENSE  test.py  utils.py
test/api/: CMakeLists.txt  api_test.py
test/api/0000_unimol_rxn/: CMakeLists.txt  test.bngl  test.cpp
test/api/0010_dump_complex_graph/: CMakeLists.txt  demonstration.txt  demontration.txt  test.bngl  test.cpp
test/api/0100_generate_network_simple/: CMakeLists.txt  test.bngl  test.cpp
test/api/0110_generate_network_complex/: CMakeLists.txt  test.bngl  test.cpp
test/api/0120_generate_network_complex_2/: CMakeLists.txt  demonstration.txt  test.bngl  test.cpp
test/api/shared/: test_utils.cpp  test_utils.h
test/boost_subgraph/: notes.txt
test/parser/: parser_test.py
test/parser/negative/: N0211_rxn_rev_no_product.bngl  N1010_syntax_errors_in_parameters_recovery.bngl  N1020_syntax_errors_in_molecule_types_recovery.bngl  N1030_syntax_errors_in_seed_species_recovery.bngl  N1040_syntax_errors_in_reaction_rules_recovery.bngl  N1050_syntax_errors_in_observables_recovery.bngl  N1060_syntax_errors_in_compartments_recovery.bngl
test/parser/todo/: component_missing.bngl  removing_molecule_from_complex.bngl
